# vse_convert

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  new_model.rs  vse_model.rs
