[package]
name = "vse_convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.145", features=["derive"]}
serde_json = "1.0.85"
anyhow = "1.0.58"
colored = "2.0.0"
clap = { version = "4.1.6", features = ["derive"] }
dialoguer = "0.10.2"
serde_yaml = "0.9.13"