[package]
name = "vse_convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.145", features=["derive"]}
serde_json = "1.0.120"
anyhow = "1.0.86"
colored = "2.1.0"
clap = { version = "4.5.9", features = ["derive"] }
dialoguer = "0.11.0"